# Version 0.26

## New Features

- added base for settings -- kaneryu on 2025-03-01



# Version 0.25

## New Features

- add rich presence support -- kaneryu on 2025-02-28



# Version 0.24

## New Features

- improve queueview visuals -- kaneryu on 2025-02-21

## Bugfixes

- add mouseblocker on queue view so clicks and scrolls don't pass through it -- kaneryu on 2025-02-21
- make search use the default song thing -- kaneryu on 2025-02-22
- bug where search used the wrong ID in searchpress -- kaneryu on 2025-02-23
- remove kimage from interactions -- kaneryu on 2025-02-25



# Version 0.23

## New Features

- Added busyindicators to image to show when the image is loading -- kaneryu on 2025-02-21

## Bugfixes

- fixed a few startup bugs, made queueview use the Song object -- kaneryu on 2025-02-21
- made duration available from song object -- kaneryu on 2025-02-21



# Version 0.22

## New Features

- add song image provider, to start moving away from KImage (#4) -- kaneryu on 2025-02-20



# Version 0.21

## New Features

- assosiate song kimages with songs #3 -- kaneryu on 2025-02-18



# Version 0.20

## New Features

- Add font files to the application with a test on the homepage -- kaneryu on 2025-01-25

## Bugfixes

- bug in cacheManager that didn't use asyncio.lock on deleting a key, and also integrity check having incorrect implementation. -- kaneryu on 2025-02-02
- fix bug in cachemanger caused by using async lock in non-async functions -- kaneryu on 2025-02-02
- fix bug in workers that didn't call the callback if using putcoverconvert, and fix bug that didn't convert coverconvert key into path before returing it to the UI -- kaneryu on 2025-02-02
- fix bug where non-rounded cover would be returned when retrieveing cover from cache -- kaneryu on 2025-02-02
- fix bug in kimage that wouldn't initialize a variable before downlading the image -- kaneryu on 2025-02-03