@@ -3,3 +3,7 @@
 ## New Features
 
 - added base for settings -- kaneryu on 2025-03-01
+
+## Bugfixes
+
+- remove KImage (closes #4) -- kaneryu on 2025-03-01
