@@ -1,1 +1,1 @@
-0.26.0
+0.26.1
