@@ -4,6 +4,10 @@
 
 - added base for settings -- kaneryu on 2025-03-01
 
+## Bugfixes
+
+- remove KImage (closes #4) -- kaneryu on 2025-03-01
+
 
 
 # Version 0.25
